[project]
name = "hf-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "helium>=5.1.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "selenium>=4.38.0",
    "smolagents[litellm]>=1.22.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
